@@ -35,7 +35,6 @@ import org.apache.cassandra.tcm.ClusterMetadata;
 import org.apache.cassandra.tcm.ClusterMetadataService;
 import org.apache.cassandra.tcm.ownership.DataPlacement;
 import org.apache.cassandra.tcm.ownership.EntireRange;
-import org.apache.cassandra.tcm.sequences.CancelCMSReconfiguration;
 import org.apache.cassandra.tcm.sequences.ProgressBarrier;
 import org.apache.cassandra.tcm.sequences.ReconfigureCMS;
 import org.apache.cassandra.tcm.transformations.cms.PrepareCMSReconfiguration;
@@ -55,9 +54,9 @@ public class ReconfigureCMSTest extends FuzzTestBase
             cluster.setUncaughtExceptionsFilter(t -> t.getMessage() != null && t.getMessage().contains("There are not enough nodes in dc0 datacenter to satisfy replication factor"));
             Random rnd = new Random(2);
             Supplier<Integer> nodeSelector = () -> rnd.nextInt(cluster.size() - 1) + 1;
-            cluster.get(nodeSelector.get()).nodetoolResult("reconfigurecms", "--sync", "0").asserts().failure();
-            cluster.get(nodeSelector.get()).nodetoolResult("reconfigurecms", "--sync", "500").asserts().failure();
-            cluster.get(nodeSelector.get()).nodetoolResult("reconfigurecms", "--sync", "5").asserts().success();
+            cluster.get(nodeSelector.get()).nodetoolResult("reconfigurecms", "0").asserts().failure();
+            cluster.get(nodeSelector.get()).nodetoolResult("reconfigurecms", "500").asserts().failure();
+            cluster.get(nodeSelector.get()).nodetoolResult("reconfigurecms", "5").asserts().success();
             cluster.get(1).runOnInstance(() -> {
                 ClusterMetadata metadata = ClusterMetadata.current();
                 Assert.assertEquals(5, metadata.fullCMSMembers().size());
@@ -68,7 +67,7 @@ public class ReconfigureCMSTest extends FuzzTestBase
                 Assert.assertTrue(i.executeInternal(String.format("SELECT * FROM %s.%s", SchemaConstants.METADATA_KEYSPACE_NAME, DistributedMetadataLogKeyspace.TABLE_NAME)).length > 0);
             });
 
-            cluster.get(nodeSelector.get()).nodetoolResult("reconfigurecms", "--sync", "1").asserts().success();
+            cluster.get(nodeSelector.get()).nodetoolResult("reconfigurecms", "1").asserts().success();
             cluster.get(1).runOnInstance(() -> {
                 ClusterMetadata metadata = ClusterMetadata.current();
                 Assert.assertEquals(1, metadata.fullCMSMembers().size());
@@ -88,7 +87,7 @@ public class ReconfigureCMSTest extends FuzzTestBase
                                                               .with(Feature.NETWORK, Feature.GOSSIP))
                                       .start())
         {
-            cluster.get(1).nodetoolResult("reconfigurecms", "--sync", "2").asserts().success();
+            cluster.get(1).nodetoolResult("reconfigurecms", "2").asserts().success();
             cluster.get(1).runOnInstance(() -> {
                 ClusterMetadataService.instance().commit(new PrepareCMSReconfiguration.Complex(ReplicationParams.simple(3).asMeta()));
                 ReconfigureCMS reconfigureCMS = (ReconfigureCMS) ClusterMetadata.current().inProgressSequences.get(ReconfigureCMS.SequenceKey.instance);
@@ -105,14 +104,17 @@ public class ReconfigureCMSTest extends FuzzTestBase
                 }
                 reconfigureCMS = (ReconfigureCMS) ClusterMetadata.current().inProgressSequences.get(ReconfigureCMS.SequenceKey.instance);
                 Assert.assertNotNull(reconfigureCMS.next.activeTransition);
-
-                ClusterMetadataService.instance().commit(CancelCMSReconfiguration.instance);
+            });
+            cluster.get(1).nodetoolResult("reconfigurecms", "--cancel").asserts().success();
+            cluster.get(1).runOnInstance(() -> {
                 ProgressBarrier.propagateLast(EntireRange.affectedRanges(ClusterMetadata.current()));
                 ClusterMetadata metadata = ClusterMetadata.current();
                 Assert.assertNull(metadata.inProgressSequences.get(ReconfigureCMS.SequenceKey.instance));
                 Assert.assertEquals(2, metadata.fullCMSMembers().size());
-                DataPlacement placements = metadata.placements.get(ReplicationParams.meta(metadata));
+                ReplicationParams params = ReplicationParams.meta(metadata);
+                DataPlacement placements = metadata.placements.get(params);
                 Assert.assertEquals(placements.reads, placements.writes);
+                Assert.assertEquals(metadata.fullCMSMembers().size(), Integer.parseInt(params.asMap().get("dc0")));
             });
 
             cluster.get(1).runOnInstance(() -> {
@@ -127,8 +129,9 @@ public class ReconfigureCMSTest extends FuzzTestBase
                 ProgressBarrier.propagateLast(EntireRange.affectedRanges(ClusterMetadata.current()));
                 reconfigureCMS = (ReconfigureCMS) ClusterMetadata.current().inProgressSequences.get(ReconfigureCMS.SequenceKey.instance);
                 Assert.assertNull(reconfigureCMS.next.activeTransition);
-
-                ClusterMetadataService.instance().commit(CancelCMSReconfiguration.instance);
+            });
+            cluster.get(1).nodetoolResult("reconfigurecms", "--cancel").asserts().success();
+            cluster.get(1).runOnInstance(() -> {
                 ProgressBarrier.propagateLast(EntireRange.affectedRanges(ClusterMetadata.current()));
                 ClusterMetadata metadata = ClusterMetadata.current();
                 Assert.assertNull(metadata.inProgressSequences.get(ReconfigureCMS.SequenceKey.instance));
